# genai-examples

./: .gitignore  CHANGELOG.md  Jenkinsfile  LICENSE.txt  Makefile  README.md  release-modules
basic-actor-chain-example/: README.md  pyproject.toml
basic-actor-chain-example/basic-actor-chain-example/: chain.py  main.py
basic-actor-chain-example/basic-actor-chain-example/actors/: basic_actor.py
basic-actor-chain-example/basic-actor-chain-example/constants/: constants.py
basic-actor-chain-example/basic_actor_chain_example/: chain.py  main.py
basic-actor-chain-example/basic_actor_chain_example/actors/: basic_actor.py
basic-actor-chain-example/basic_actor_chain_example/constants/: constants.py
basic-actor-chain-example/tests/integration/basic_actor_chain/: test_chain.py
basic-actor-chain-example/tests/unit/basic_actor_chain/: test_chain.py
genai-chain-docs/: README.md  docker-compose.yml  pyproject.toml
genai-chain-docs/genai_chain_docs/: chain.py  main.py
genai-chain-docs/scripts/: load_vault_secrets.py  start-tunnel.sh
genai-chain-docs/scripts/genai-adif-rag/: create_index.py  process_documents.py
genai-chain-docs/scripts/genai-openai-rag/: create_index.py  process_documents.py
genai-chain-docs/scripts/genai-openai-rag/resources/: state.ini
genai-chain-docs/tests/integration/: test_chain.py
genai-chain-docs/tests/unit/: test_chain.py
genai-chain-examples/: README.md  docker-compose.yml  pyproject.toml
genai-chain-examples/genai_chain_auth/: README.md  chain.py  main.py
genai-chain-examples/genai_chain_echo/: README.md  chain.py  main.py
genai-chain-examples/genai_chain_gateway/: README.md  chain.py  main.py
genai-chain-examples/genai_chain_joke/: README.md  chain.py  main.py
genai-chain-examples/genai_chain_memory/: README.md  chain.py  main.py
genai-chain-examples/genai_chain_metrics/: README.md  chain.py  main.py
genai-chain-examples/scripts/: create_openai_endpoints.py  load_vault_secrets.py  start_tunnels.sh
genai-chain-examples/tests/integration/chain_echo/: locustfile.py
genai-chain-examples/tests/integration/chain_gateway/: test_chain.py
genai-chain-examples/tests/integration/chain_joke/: test_chain.py
genai-chain-examples/tests/integration/chain_memory/: test_chain.py
genai-chain-examples/tests/unit/chain_auth/: test_chain.py
genai-chain-examples/tests/unit/chain_echo/: test_chain.py
genai-chain-examples/tests/unit/chain_gateway/: test_chain.py
genai-chain-examples/tests/unit/chain_joke/: test_chain.py
genai-chain-examples/tests/unit/chain_memory/: test_chain.py
genai-chain-examples/tests/unit/chain_metrics/: test_chain.py
memory-chain-example/: README.md  pyproject.toml
memory-chain-example/memory_chain_example/: chain.py  main.py
memory-chain-example/tests/unit/memory_chain_example/: test_chain.py
opensearch-chain-example/: README.md  pyproject.toml
opensearch-chain-example/opensearch_chain_example/: chain.py  main.py
opensearch-chain-example/opensearch_chain_example/constants/: constants.py
opensearch-chain-example/opensearch_chain_example/services/: opensearch_service.py
opensearch-chain-example/tests/integration/basic_actor_chain/: test_chain.py
opensearch-chain-example/tests/unit/opensearch_chain_example/: test_chain.py
scripts/: create_env_file.py
virtualizer-chain-example/: README.md  pyproject.toml
virtualizer-chain-example/tests/unit/: test_chain.py
virtualizer-chain-example/virtualizer_chain_example/: chain.py  main.py
